--- a/index.html
+++ b/index.html
@@ -256,7 +256,17 @@
               <p class="portfolio-category">Промышленность</p>
             </div>
           </div>
-
+          <div class="portfolio-item" data-category="characters">
+            <img
+              src="assets/img/Bertie/berty.png"
+              alt="Берти и Брамбл"
+              class="portfolio-img"
+            />
+            <div class="portfolio-overlay">
+              <h3 class="portfolio-title">Берти и Брамбл</h3>
+              <p class="portfolio-category">Персонажи</p>
+            </div>
+          </div>
           <div class="portfolio-item" data-category="characters">
             <img
               src="assets/img/Mecha/model vs concept.jpg"
