del text substance

--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
           description:
             "Детализированная 3D модель локомотива ФД20-1562, созданная по историческим чертежам. Модель включает высокодетализированные текстуры и анимацию механизмов.",
           date: "2024",
-          software: "Blender, Substance Painter",
+          software: "Blender",
           media: [
             {
               type: "image",
@@ -464,7 +464,7 @@
           description:
             "Футуристический робот с уникальным дизайном и анимацией. Модель включает риг для анимации и различные текстуры.",
           date: "2024",
-          software: "Blender, ZBrush, Substance Painter",
+          software: "Blender, ZBrush",
           media: [
             {
               type: "image",
@@ -488,7 +488,7 @@
           description:
             "Концептуальный револьвер в стиле киберпанк. Высокополигональная модель с PBR текстурами.",
           date: "2023",
-          software: "Blender, Substance Painter",
+          software: "Blender",
           media: [
             {
               type: "image",
@@ -522,7 +522,7 @@
           description:
             "Историческая парусная шхуна с детализированными парусами и такелажем. Модель подготовлена для использования в играх и визуализациях.",
           date: "2023",
-          software: "Blender, Substance Painter",
+          software: "Blender",
           media: [
             {
               type: "image",
@@ -556,7 +556,7 @@
           description:
             "3D модель мотоцикла Harley-Davidson с фотореалистичными материалами и детализацией.",
           date: "2023",
-          software: "Blender, Substance Painter",
+          software: "Blender",
           media: [
             {
               type: "image",
@@ -600,7 +600,7 @@
           description:
             "Винтажный граммофон с детализированными механизмами и реалистичными материалами.",
           date: "2022",
-          software: "Blender, Substance Painter",
+          software: "Blender",
           media: [
             {
               type: "image",
@@ -806,7 +806,7 @@
           description:
             "Стилизованные персонажи Берти и Брамбл с уникальным дизайном и выразительными чертами.",
           date: "2023",
-          software: "Blender, ZBrush, Substance Painter",
+          software: "Blender, ZBrush",
           media: [
             {
               type: "image",
@@ -855,7 +855,7 @@
           description:
             "Крупномасштабная механизированная модель с сложной анимацией и детализированными системами.",
           date: "2024",
-          software: "Blender, Substance Painter",
+          software: "Blender",
           media: [
             {
               type: "image",
@@ -899,7 +899,7 @@
           description:
             "Детализированная модель танка Т-90 с системами ШТОРА и ПР-К, созданная для технической визуализации.",
           date: "2023",
-          software: "Blender, Substance Painter",
+          software: "Blender",
           media: [
             {
               type: "image",
