--- a/index3.html
+++ b/index3.html
@@ -1191,7 +1191,7 @@
                 category: 'Транспорт',
                 description: 'Детализированная 3D модель локомотива ФД20-1562, созданная по историческим чертежам. Модель включает высокодетализированные текстуры и анимацию механизмов.',
                 date: '2024',
-                software: 'Blender, Substance Painter',
+                software: 'Blender',
                 media: [
                     { type: 'image', src: 'assets/img/Locomotive/vasilii-ziadik-fd20-1562.jpg', alt: 'Локомотив ФД20-1562 - вид спереди' },
                     { type: 'image', src: 'assets/img/Locomotive/ФД20_1562_01.jpg', alt: 'Детализация локомотива' },
@@ -1204,7 +1204,7 @@
                 category: 'Персонажи',
                 description: 'Футуристический робот с уникальным дизайном и анимацией. Модель включает риг для анимации и различные текстуры.',
                 date: '2024',
-                software: 'Blender, ZBrush, Substance Painter',
+                software: 'Blender, ZBrush',
                 media: [
                     { type: 'image', src: 'assets/img/Robot №17/robot17_2.jpg', alt: 'Robot №17/1 - основное изображение' },
                     { type: 'image', src: 'assets/img/Robot №17/rob1.png', alt: 'Детализация модели' },
@@ -1215,7 +1215,7 @@
                 category: 'Объекты',
                 description: 'Концептуальный револьвер в стиле киберпанк. Высокополигональная модель с PBR текстурами.',
                 date: '2023',
-                software: 'Blender, Substance Painter',
+                software: 'Blender',
                 media: [
                     { type: 'image', src: 'assets/img/Zero Nine/smart_scope.jpg', alt: 'Револьвер ZERO NINE' },
                     { type: 'image', src: 'assets/img/Zero Nine/smart_scope2.jpg', alt: 'Детали револьвера' },
@@ -1228,7 +1228,7 @@
                 category: 'Транспорт',
                 description: 'Историческая парусная шхуна с детализированными парусами и такелажем. Модель подготовлена для использования в играх и визуализациях.',
                 date: '2023',
-                software: 'Blender, Substance Painter',
+                software: 'Blender',
                 media: [
                     { type: 'image', src: 'assets/img/Royalist/Royalist_model_3.JPG', alt: 'Шхуна Роялист' },
                     { type: 'image', src: 'assets/img/Royalist/Royalist.png', alt: '3D модель шхуны' },
@@ -1241,7 +1241,7 @@
                 category: 'Транспорт',
                 description: '3D модель мотоцикла Harley-Davidson с фотореалистичными материалами и детализацией.',
                 date: '2023',
-                software: 'Blender, Substance Painter',
+                software: 'Blender',
                 media: [
                     { type: 'image', src: 'assets/img/Harley/HARLEY-DAVIDSON.jpg', alt: 'Harley-Davidson' },
                     { type: 'image', src: 'assets/img/Harley/Harley-Devidson_1.jpg', alt: 'Детали мотоцикла' },
@@ -1270,7 +1270,7 @@
                 category: 'Объекты',
                 description: 'Винтажный граммофон с детализированными механизмами и реалистичными материалами.',
                 date: '2022',
-                software: 'Blender, Substance Painter',
+                software: 'Blender',
                 media: [
                     { type: 'image', src: 'assets/img/Grammofone/Grammophone.png', alt: 'Граммофон' },
                     { type: 'image', src: 'assets/img/Grammofone/Grammophone2.png', alt: 'Детали механизма' },
@@ -1342,7 +1342,7 @@
                 category: 'Персонажи',
                 description: 'Стилизованные персонажи Берти и Брамбл с уникальным дизайном и выразительными чертами.',
                 date: '2023',
-                software: 'Blender, ZBrush, Substance Painter',
+                software: 'Blender, ZBrush',
                 media: [
                     { type: 'image', src: 'assets/img/Bertie/berty.png', alt: 'Берти - основной вид' },
                     { type: 'image', src: 'assets/img/Bertie/berty1.png', alt: 'Берти - детализация' },
@@ -1358,7 +1358,7 @@
                 category: 'Персонажи',
                 description: 'Крупномасштабная механизированная модель с сложной анимацией и детализированными системами.',
                 date: '2024',
-                software: 'Blender, Substance Painter',
+                software: 'Blender',
                 media: [
                     { type: 'image', src: 'assets/img/Mecha/model vs concept.jpg', alt: 'Меха - сравнение с концептом' },
                     { type: 'image', src: 'assets/img/Mecha/MECHA.jpg', alt: 'Меха - основной вид' },
@@ -1373,7 +1373,7 @@
                 category: 'Транспорт',
                 description: 'Детализированная модель танка Т-90 с системами ШТОРА и ПР-К, созданная для технической визуализации.',
                 date: '2023',
-                software: 'Blender, Substance Painter',
+                software: 'Blender',
                 media: [
                     { type: 'image', src: 'assets/img/Modeling/t90.jpg', alt: 'Т-90 - основной вид' },
                     { type: 'image', src: 'assets/img/Modeling/t90_2.jpg', alt: 'Т-90 - вид сбоку' },
